--- a/ClientManagementApp/ClientManagementApp/ClientManagementApp.csproj
+++ b/ClientManagementApp/ClientManagementApp/ClientManagementApp.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.4" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.4" />
   </ItemGroup>
 
 </Project>
